--- a/src/app/core/components/layouts/header/header/header.component.css
+++ b/src/app/core/components/layouts/header/header/header.component.css
@@ -9,7 +9,6 @@ position: relative;
 
 
 
-
 nav{
 display: flex;
 justify-content: space-between !important;
@@ -26,9 +25,10 @@ width: 100%;
 
 }
 nav .left img{
-  width: 170px;
-height: 70px;
-  border-radius: 70%;
+  width: 180px;
+height: 80px;
+
+
 
 }
 .nav-links{
@@ -57,14 +57,7 @@ font-size: 15px;
   font-size: 18px;
 }
 
-button{
-  position: relative;
-bottom:  8px;
 
-
-
-
-}
 
 .nav-links ul li:hover{
 background-color: blueviolet;
@@ -150,7 +143,8 @@ padding:30px 0;
 transition: .4s ease-in-out;
 
   }
-  nav img{  width: 100px;
+  nav .left img{
+    width: 100px;
     height: 50px;
   }
 
