--- a/src/app/core/components/layouts/header/header/header.component.html
+++ b/src/app/core/components/layouts/header/header/header.component.html
@@ -1,7 +1,7 @@
 <section class="header">
 <nav class=""  >
   <div class="left">
-    <img src=" https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/png-transparent-zara-fashion-clothes-clothing-brands-and-logos-icon.png?alt=media&token=4545ac12-2cac-46f4-8a6c-26e5cad74c4c" alt="">
+    <img src="https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/image%20(1).png?alt=media&token=19acc0f7-7c54-4131-9530-e361be4b956b" alt="">
   </div>
   <div class="right">
 
@@ -20,9 +20,9 @@
           <li  class="auth-btns-above700"><a [routerLink]="['/auth/login']" >LOG IN</a></li>
 
 
-        <li class="auth-btns"> <button class="btn" mat-raised-button color="primary" [routerLink]="['/auth/login']" type="submit">LOG IN</button></li>
-        <li class="auth-btns"> <button    class="btn-1" mat-button color="primary"  [routerLink]="['/auth/signup']" type="submit">SIGN UP</button></li>
 
+        <li class="auth-btns"> <button    class="btn-1" mat-button color="primary"  [routerLink]="['/auth/signup']" type="submit">SIGN UP</button></li>
+        <li class="auth-btns"> <button class="btn" mat-raised-button color="primary" [routerLink]="['/auth/login']" type="submit">LOG IN</button></li>
       </ul>
 
     </div>
