--- a/src/app/core/components/layouts/header/header/header.component.html
+++ b/src/app/core/components/layouts/header/header/header.component.html
@@ -21,8 +21,8 @@
 
 
 
-        <li class="auth-btns"> <button    class="btn-1" mat-button color="primary"  [routerLink]="['/auth/signup']" type="submit">SIGN UP</button></li>
-        <li class="auth-btns"> <button class="btn" mat-raised-button color="primary" [routerLink]="['/auth/login']" type="submit">LOG IN</button></li>
+        <li class="auth-btns"> <button    class="btn-1" mat-button  [routerLink]="['/auth/signup']" type="submit">SIGN UP</button></li>
+        <li class="auth-btns"> <button class="btn" mat-raised-button  [routerLink]="['/auth/login']" type="submit">LOG IN</button></li>
       </ul>
 
     </div>
